I updated the views.py file adding printing of the uploaded file url with a context list

--- a/schoolmanager/book/templates/book/uploadbook.html
+++ b/schoolmanager/book/templates/book/uploadbook.html
@@ -13,9 +13,20 @@
                         <input type="file" name="document">
                         <button type="submit" name="submit"> Upload Book </button>
                     </form>
+
+                    {% if url %}
+                    <p>Uploaded File: <a href="{{ url }}"> {{ url }}</a></p>
+                    {% endif %}
+                    
                 </div>
             </div>
         </div>
     </div>
+   
 </div>
+
+
+
 {% endblock %}
+
+
